log
Wed, Mar 26, 2025  8:32:56 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Wed, Mar 26, 2025  8:37:22 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
31f17fb
Wed, Mar 26, 2025  8:40:12 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:41:16: error: 'List' {aka 'struct List'} has no member named 'data'
   41 |     return list->data;
      |                ^~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
f2504e4
Wed, Mar 26, 2025  8:40:57 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
29e174f
Wed, Mar 26, 2025  8:43:10 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
05dab91
Wed, Mar 26, 2025  8:43:29 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
5c268f6
Wed, Mar 26, 2025  8:44:56 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
c9dc60c
Wed, Mar 26, 2025  8:47:16 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
5d9f85f
Wed, Mar 26, 2025  8:47:59 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
48af8fc
Wed, Mar 26, 2025  8:48:51 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
292c6e0
Wed, Mar 26, 2025  8:52:23 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
2a2007d
Wed, Mar 26, 2025  8:53:19 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
9395d05
Thu, Mar 27, 2025  1:21:25 PM: 
 tests:  5|4
total_score: 25/70
08e63cc
Thu, Mar 27, 2025  1:25:33 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
a51d307
Thu, Mar 27, 2025  1:25:57 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
f01bc06
Thu, Mar 27, 2025  1:26:46 PM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
4624eb7
Thu, Mar 27, 2025  1:27:23 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'prevList':
list.c:64:1: error: expected ';' before '}' token
   64 | }
      | ^
Compilation failed
ea7e701
Thu, Mar 27, 2025  1:27:29 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
b9a10ab
Thu, Mar 27, 2025  1:27:46 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
92a7a44
Thu, Mar 27, 2025  1:28:16 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6af3d5b
Thu, Mar 27, 2025  1:29:20 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
09785c0
Thu, Mar 27, 2025  1:33:37 PM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
bf4d298
Thu, Mar 27, 2025  1:34:29 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:67:51: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
   67 |     if(list == NULL || list->head == NULL) return NULL;
      |                                                   ^~~~
list.c:66:6: note: declared here
   66 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
Compilation failed
dd401f3
Thu, Mar 27, 2025  1:35:00 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:67:51: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
   67 |     if(list == NULL || list->head == NULL) return NULL;
      |                                                   ^~~~
list.c:66:6: note: declared here
   66 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c:74:12: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
   74 |     return NULL;
      |            ^~~~
list.c:66:6: note: declared here
   66 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
Compilation failed
9663009
Thu, Mar 27, 2025  1:35:31 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:67:51: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
   67 |     if(list == NULL || list->head == NULL) return NULL;
      |                                                   ^~~~
list.c:66:6: note: declared here
   66 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
Compilation failed
e771e31
Thu, Mar 27, 2025  7:04:08 PM: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:67:29: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
   67 |     if(list == NULL) return NULL;
      |                             ^~~~
list.c:66:6: note: declared here
   66 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
Compilation failed
9d134f5
Thu, Mar 27, 2025  7:04:14 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:67:29: error: 'return' with a value, in function returning void [-Wreturn-mismatch]
   67 |     if(list == NULL) return NULL;
      |                             ^~~~
list.c:66:6: note: declared here
   66 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
Compilation failed
aef353f
Thu, Mar 27, 2025  7:04:52 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2b99e6c
Thu, Mar 27, 2025  7:05:12 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
559a730
